--- a/ftd_sys/Cargo.toml
+++ b/ftd_sys/Cargo.toml
@@ -11,8 +11,8 @@ crate-type = ["cdylib"]
 [dependencies]
 pyo3 = { version = "0.14", features = ["extension-module"] }
 pyo3-asyncio = { version = "0.14", features = ["tokio-runtime"] }
-#fpm = { git = "https://github.com/FifthTry/fpm", rev = "0a21857" }
-fpm = { path = "../../fpm" }
+fpm = { git = "https://github.com/FifthTry/fpm", rev = "0b4bff9" }
+# fpm = { path = "../../fpm" }
 serde = { version = "1", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1"
